# CPS_IOT_HW

./: ANSWER.md  Answers.md  Code.ino  Document.md  README.md
Client/CPSMonitoringSystemGUI/: cpsapplication.cpp  cpssocket.cpp  cpstextfield.h
Code/: Code.ino
Embeded/Code/: Code.ino
Embeded/inoCode/: inoCode.ino
Server/database/: users.json
Server/src/: httpServer.cpp  interface.h  logger.cpp  loginhistory.cpp  main.cpp  user.cpp  usersManager.h  webSocketServer.h
SimpleWebSocket/: employee.h  employeeshandler.cpp
inoCode/: inoCode.ino
proteus/: hw1_cps.pdsprj  hw1_cps.pdsprj.DESKTOP-D7UE3D2.Ali.workspace  hw1_cps.pdsprj.DESKTOP-I8A3P4U.Parsa.workspace
proteus/Project Backups/: hw1_cps [20240408, 16-57-24].pdsprj  hw1_cps [20240408, 16-57-35].pdsprj  hw1_cps [20240408, 16-57-50].pdsprj  hw1_cps [20240408, 16-57-53].pdsprj  hw1_cps [20240408, 17-53-23].pdsprj  hw1_cps [20240418, 14-39-07].pdsprj  hw1_cps [20240430, 23-44-56].pdsprj  hw1_cps [20240501, 11-45-28].pdsprj  hw1_cps [Autosaved].pdsprj  (+2 more)
webSocket/: CMakeLists.txt  employeeshandler.h  httpserver.cpp  httpserver.h  loginhistory.cpp  loginhistory.h  loginhistoryhandler.cpp  loginhistoryhandler.h  main.cpp  request.cpp  request.h  response.cpp  response.h  sendingrequest.cpp  systemadmin.cpp  systemadmin.h  systemadminshandler.cpp  systemadminshandler.h  websocketserver.cpp  websocketserver.h
webSocket/data/: employee_info.json
webSocket/src/: CMakeLists.txt  defines.cpp  defines.h  httpServer.h  interface.cpp  logger.h  loginhistory.h  main.cpp  user.h  usersManager.cpp  webSocketServer.cpp
(+1 files in other folders)
